公司提交的

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,28 @@
-spring.data.cassandra.keyspace-name=mykeyspace
-spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
+server.port=8062
+spring.profiles.active=dev
+server.servlet.context-path=/
+#==============json date format configuration begin=========================
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
+#==============json date format configuration end=========================
+
+#==============thymeleaf configuration begin=========================
+# THYMELEAF (ThymeleafAutoConfiguration)
+# set to false for hot refresh
+#启用THYMELEAF缓存
+spring.thymeleaf.cache=false
+# 使用MVC-Thymeleaf主题
+spring.thymeleaf.enabled=true 
+# Thymeleaf主题编码
+spring.thymeleaf.encoding=UTF-8
+# Thymeleaf页面前缀
+#spring.thymeleaf.prefix=classpath:/
+# Thymeleaf页面后缀
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.servlet.content-type=text/html
+
+#==============thymeleaf configuration end=========================
+#==============static file configuration begin=========================
+#Spring Boot的默认静态资源的路径为：
+spring.resources.static-locations=classpath:/resources/,classpath:/static/,classpath:/public/
